[package]
name = "bsky_jennings"
version = "0.1.0"
edition = "2021"
description = "A library to track and analyze subgraphs of Bluesky's follows"
license = "GPL-2.0"
repository = "https://github.com/shuntingyard/bsky_jennings/"
exclude = ["GNN.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "atpgraph"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
async-trait = "0.1.73"
atp_client = { version = "0.0.1", path = "../atp_client" }
atrium-api = "0.4"
atrium-xrpc = "0.3.0"
clap = { version = "4.4.6", features = ["derive", "env"] }
http = "0.2.9"
jwt = "0.16.0"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["max_level_trace"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"
